log
Mon, Apr 14, 2025 10:06:02 PM: 
 hashmap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
eeef3b7
Mon, Apr 14, 2025 11:17:21 PM: 
 hashmap.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:48:13: error: implicit declaration of function 'isequal' [-Werror=implicit-function-declaration]
         if (isequal(map->buckets[index]->key, key));
             ^~~~~~~
cc1.exe: all warnings being treated as errors
0f5244f
Mon, Apr 14, 2025 11:18:25 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
4934fe2
